@@ -1,3 +1,8 @@
+2004-04-01  Arvind Samptur  <arvind.samptur@wipro.com>
+
+	* bonobo/bonobo-dock-item-grip.c: (bonobo_dock_item_grip_dock):
+	When docking a floating toolbar retain its orientation
+
 2004-03-18  Arvind Samptur  <arvind.samptur@wipro.com>
 
 	Patch from Arvind and Michael Meeks <michael@ximian.com>
